# GusWorld

./: .bigtech-porte  .editorconfig  .gitignore  .gitmodules  ACKNOWLEDGMENTS.md  AI-DISCLOSURE.md  ASSETS-LICENSE.md  AUDITORIAS.md  CHANGELOG.md  CHARS.md  CLAUDE.md  CONTRACT.md  GEMINI.md  ORIENTACOES.md  PLACES.md  README.md  ROADMAP.md  TESTES.md  TEXTREVIEW.md  THIRD-PARTY-LICENSES.md  TODO.md  TODO_ARCHIVE.md  sinopse.md
GusEngine/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
GusEngine/app/: CMakeLists.txt  main.cpp
GusEngine/app/src/: app_icon.cpp  audio_smoke.cpp  boot_pixel_overlay.cpp  game_window.cpp  glitch_overlay.cpp  maestro.cpp  maestro_logic.cpp  screen_state.cpp  sdl_window.cpp
GusEngine/app/src/dialogue/: npc_dialogue_catalog.cpp
GusEngine/app/src/i18n/: translator.cpp
GusEngine/app/src/screens/: anim_catalog.cpp  anim_preview.cpp  battle_anim.cpp  battle_assets.cpp  battle_cockpit_pills.cpp  battle_cockpit_rml.cpp  battle_cockpit_verb_ids.cpp  battle_floaters.cpp  battle_hud_model.cpp  battle_input.cpp  battle_layout.cpp  battle_log_model.cpp  battle_menu.cpp  battle_pacing.cpp  battle_preview.cpp  battle_scene.cpp  battle_scene_aim.cpp  battle_scene_picker.cpp  battle_scene_render.cpp  battle_sprite_anim.cpp  city_loader.cpp  city_scene.cpp  difficulty_menu.cpp  difficulty_menu_loop.cpp  difficulty_menu_rml.cpp  npc_dialogue_loop.cpp  npc_dialogue_loop_gl.cpp  npc_dialogue_overlay.cpp  npc_dialogue_rml.cpp  overworld_sim.cpp  player_sprites_loader.cpp  save_load_menu.cpp  save_load_menu_loop.cpp  save_load_menu_rml.cpp  sprite_animation.cpp  system_menu.cpp  system_menu_loop.cpp  system_menu_rml.cpp  title_menu.cpp  title_menu_loop.cpp  (+2 more)
GusEngine/app/tests/: CMakeLists.txt  anim_catalog_test.cpp  battle_anim_test.cpp  battle_cockpit_pills_test.cpp  battle_cockpit_rml_test.cpp  battle_cockpit_verb_ids_test.cpp  battle_floaters_test.cpp  battle_hud_model_test.cpp  battle_key_routing_test.cpp  battle_layout_test.cpp  battle_log_model_test.cpp  battle_menu_test.cpp  battle_pacing_test.cpp  battle_scene_test.cpp  battle_sprite_anim_test.cpp  boot_pixel_overlay_test.cpp  city_scene_test.cpp  difficulty_menu_loop_interaction_test.cpp  difficulty_menu_rml_test.cpp  difficulty_menu_test.cpp  glitch_overlay_test.cpp  maestro_logic_test.cpp  npc_dialogue_catalog_test.cpp  npc_dialogue_loop_gl_test.cpp  npc_dialogue_overlay_test.cpp  npc_dialogue_rml_test.cpp  npc_dialogue_save_roundtrip_test.cpp  overworld_sim_test.cpp  player_sprites_layout_test.cpp  save_load_menu_interaction_test.cpp  save_load_menu_rml_test.cpp  save_load_menu_test.cpp  screen_state_sync_input_integration_test.cpp  screen_state_test.cpp  sdl_window_marker_defer_test.cpp  sdl_window_sync_input_event_test.cpp  sprite_anchor_test.cpp  sprite_animation_test.cpp  system_menu_rml_test.cpp  system_menu_test.cpp  (+5 more)
GusEngine/app/tools/: CMakeLists.txt  frozen_bg_probe.cpp  msaa_glintfx_probe.cpp  npcdlg_hover_probe.cpp  npcdlg_screenshot_probe.cpp  poc_gl_single_context_probe.cpp  repro_bertoldo.cpp  save_load_screenshot_probe.cpp  sysmenu_controls_diag_probe.cpp  sysmenu_controls_screenshot_probe.cpp  sysmenu_keyboard_hover_probe.cpp  sysmenu_pause_screenshot_probe.cpp
GusEngine/assets/maps/: README.md
GusEngine/assets/maps/compiled/: distritos_inferiores.gmap
GusEngine/assets/maps/source/: distritos_inferiores.csv
GusEngine/cmake/toolchains/: mingw-w64.cmake
GusEngine/core/: CMakeLists.txt
GusEngine/core/src/: math_util.cpp  version.cpp
GusEngine/core/src/anim/: anim_clock.cpp  boot_pixel_sequence.cpp  (+3 more)
GusEngine/domain/: CMakeLists.txt
GusEngine/domain/src/: domain_info.cpp
GusEngine/domain/tests/: CMakeLists.txt  action_clock_test.cpp  adware_sterling_test.cpp  backdoor_signal_test.cpp  balance_harness.hpp  balance_harness_test.cpp  battery_state_test.cpp  canonical_templates_test.cpp  card_collection_test.cpp  card_hardware_test.cpp  card_provenance_test.cpp  card_virus_combat_test.cpp  cards_hw_i18n_registry_test.cpp  cards_hw_lifecycle_integration_test.cpp  cards_hw_mutation_killers_test.cpp  cards_hw_ops_property_test.cpp  cartas_comuns_engine_test.cpp  character_template_test.cpp  combat_actor_property_test.cpp  combat_actor_test.cpp  combat_constants_test.cpp  combat_enums_test.cpp  combat_formula_property_test.cpp  combat_formula_test.cpp  combat_inc2_test.cpp  combat_inc3_test.cpp  combat_records_test.cpp  combat_state_machine_test.cpp  combat_state_test.cpp  combat_status_effects_test.cpp  combat_status_fixes_test.cpp  combo_table_test.cpp  contamination_service_test.cpp  controls_diff_test.cpp  controls_hash_test.cpp  controls_json_test.cpp  controls_name_sanitize_test.cpp  controls_remap_apply_test.cpp  controls_restore_test.cpp  counting_random.hpp  (+71 more)
GusEngine/platform/: CMakeLists.txt
GusEngine/platform/rmlui/: README.md  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_SDL.cpp  gl3_loader.cpp  rmlui_hud.cpp
GusEngine/platform/src/: platform_info.cpp
GusEngine/platform/tests/: CMakeLists.txt  alpha_bbox_test.cpp  asset_source_test.cpp  audio_engine_test.cpp  controls_file_store_test.cpp  font_atlas_test.cpp  gamepad_mapping_test.cpp  input_mapper_test.cpp  key_translation_test.cpp  platform_info_test.cpp  render2d_gl3_test.cpp  render2d_rhi_test.cpp  render2d_sdl_test.cpp  rmlui_hud_test.cpp  save_file_store_test.cpp  sdl_input_test.cpp  settings_file_store_test.cpp  text_metrics_test.cpp  viewport_transform_test.cpp
GusEngine/tests/: CMakeLists.txt  aead_xchacha20poly1305_test.cpp  anim_clock_test.cpp  argon2id_test.cpp  asset_paths_test.cpp  boot_pixel_sequence_test.cpp  breath_oscillator_test.cpp  camera_clamp_test.cpp  collision_sweep_invariants_test.cpp  core_smoke_test.cpp  corner_assist_sweep_test.cpp  corner_assist_test.cpp  depth_sort_test.cpp  fade_transition_test.cpp  fixed_timestep_test.cpp  glitch_dissolve_test.cpp  grid_collision_test.cpp  hmac_sha256_test.cpp  key_derivation_test.cpp  obstacle_collision_test.cpp  secure_zero_test.cpp  sha256_test.cpp  stamina_test.cpp  step_clamp_test.cpp  tile_grid_test.cpp  winded_timer_test.cpp
(+1003 files in other folders)
